erlang-p1-zlib (1.0.1-0.1) unstable; urgency=medium

  * New upstream release.
  * Use new upstream repository at https://github.com/processone/ezlib.
  * Conflict with ejabberd << 1:16.02.

 -- Mathias Ertl <mati@jabber.at>  Thu, 10 Mar 2016 15:21:03 +0100

erlang-p1-zlib (1.0.0-0.1) unstable; urgency=medium

  * New upstream release.
  * Use upstream releases instead of the latest git snapshot.
  * Use upstream-tag format to make use of upstream tags.
  * Name me as maintainer in debian/control.
  * Add VCS-* fields in debian/control.
  * Fix various minor errors in debian/copyright.
  * Add erlang-syntax-tools so we can build on wily.

 -- Mathias Ertl <mati@jabber.at>  Sat, 16 Jan 2016 13:33:44 +0100

erlang-p1-zlib (0.2015.02.23-0.1local) unstable; urgency=medium

  * Imported Upstream version 0.2015.02.23

 -- Mathias Ertl <mati@jabber.at>  Sat, 07 Mar 2015 00:43:01 +0100

erlang-p1-zlib (0.2014.05.06-1) unstable; urgency=medium

  * Imported Upstream version 0.2014.05.06
  * Added use of dpkg-buildflags to debian/rules

 -- Philipp Huebner <debalance@debian.org>  Wed, 14 May 2014 11:29:50 +0200

erlang-p1-zlib (0.2013.12.09-2) unstable; urgency=medium

  * Add correct Erlang dependencies

 -- Philipp Huebner <debalance@debian.org>  Sat, 10 May 2014 12:58:52 +0200

erlang-p1-zlib (0.2013.12.09-1) unstable; urgency=low

  * Initial release, see #744885 for background

 -- Philipp Huebner <debalance@debian.org>  Wed, 16 Apr 2014 18:34:07 +0200