@@ -1,1 +1,1 @@
-EXEC_REBAR_COMMANDS=compile
+EXEC_REBAR_COMMANDS=compile eunit
