@@ -1,1 +1,3 @@
-# There are no upstream releases yet to be tracked
+version=3
+opts="filenamemangle=s/(?:.*)?v?(\d[\d\.]*)\.tar\.gz/erlang-p1-zlib_$1.tar.gz/" \
+  https://github.com/processone/ezlib/tags (?:.*/)?v?(\d[\d\.]*)\.tar\.gz
